tests/failing/invalid_prefix.dodo
fn main() {
    let x: u32 = else 12;
}
